integral chart axis

--- a/pastvina/templates/pastvina/parts/age_chart.html
+++ b/pastvina/templates/pastvina/parts/age_chart.html
@@ -55,6 +55,9 @@
                             labelString: "tuny",
                             {% endif %}
                         },
+                        ticks: {
+                            stepSize: 1
+                        }
                     }
                 ],
 
