--- a/pastvina/templates/pastvina/game_overview.html
+++ b/pastvina/templates/pastvina/game_overview.html
@@ -15,43 +15,47 @@
 <section class="padding-small light">
     <h2>Přehled kol</h2>
     <div class="horizontal-container">
-        {% if test_round %}
+        {% if test_rounds|length > 0 %}
         <div style="flex: 1;" class="vertical-container">
+            {% for round in test_rounds %}
             <div class="game-wrapper">
-                <a class="game-ref test_game" href="{% url 'game' test_round.id %}">
-                    <h3>Testovací hra</h3>
+                <a class="game-ref test_game" href="{% url 'game' round.id %}">
+                    <h3>Testovací kolo{% if test_rounds|length > 1 %} {{forloop.counter}}{% endif %}</h3>
                 </a>
             </div>
+            {% endfor %}
         </div>
         {% endif %}
+        {% if real_rounds|length > 0 %}
         <div style="flex: 2;" class="vertical-container">
-        {% for round in real_rounds %}
+            {% for round in real_rounds %}
             <div class="game-wrapper">
                 <a class="game-ref real_game" href="{% url 'game' round.id %}">
                     <h3>Kolo {{forloop.counter}}</h3>
                 </a>
             </div>
-        {% endfor %}
+            {% endfor %}
         </div>
+        {% endif %}
     </div>
 </section>
 
 <section class="statistics light-color">
     <h2>Statistiky z odehraných kol:</h2>
     <div class="vertical-container">
-        {% if test_round %}
-            <div class="game-wrapper">
-                <a class="game-ref" href="{% url 'statistics' test_round.id %}">
-                    <h3 style="margin:4px">Testovací hra</h3>
-                </a>
-            </div>
-        {% endif %}
+        {% for round in test_rounds %}
+        <div class="game-wrapper">
+            <a class="game-ref" href="{% url 'statistics' round.id %}">
+                <h3 style="margin:4px">Testovací kolo{% if test_rounds|length > 1 %} {{forloop.counter}}{% endif %}</h3>
+            </a>
+        </div>
+        {% endfor %}
         {% for round in real_rounds %}
-            <div class="game-wrapper">
-                <a class="game-ref" href="{% url 'statistics' round.id %}">
-                    <h3 style="margin:4px">Kolo {{forloop.counter}}</h3>
-                </a>
-            </div>
+        <div class="game-wrapper">
+            <a class="game-ref" href="{% url 'statistics' round.id %}">
+                <h3 style="margin:4px">Kolo {{forloop.counter}}</h3>
+            </a>
+        </div>
         {% endfor %}
         </div>
     </div>
