--- a/pastvina/templates/pastvina/login.html
+++ b/pastvina/templates/pastvina/login.html
@@ -12,7 +12,7 @@
 
             <p><input type="password" name="password" placeholder="Heslo..."></p>
 
-            <p><button type="submit" class="button primary">Přihlaš se!</button></p>
+            <p><button type="submit" class="login-button primary">Přihlaš se!</button></p>
 
             {% if messages %}
             <ul class="messages">
