--- a/pastvina/templates/pastvina/parts/login-modal.html
+++ b/pastvina/templates/pastvina/parts/login-modal.html
@@ -9,7 +9,7 @@
     <p><input id="username-field" type="text" name="username" placeholder="Login..."></p>
     <p><input id="password-field" type="password" name="password" placeholder="Heslo..."></p>
     <p id="message" class="alert"></p>
-    <p><button id="login-button" class="button primary">Přihlaš se!</button></p>
+    <p><button class="login-button primary">Přihlaš se!</button></p>
     <script type="text/javascript">
         function login(){
             var username = $("#username-field").val().trim();
