--- a/pastvina/static/pastvina/css/main.css
+++ b/pastvina/static/pastvina/css/main.css
@@ -10,13 +10,88 @@ body {
 
 /* =========== CONSTANTS =========== */
 
-.input {
+input {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     height: 30px;
     padding: 5px;
+    border: 1px solid #bbb;
     border-radius: 5px;
+}
+
+button{
+    display: inline-block;
+    *display: inline;
+    zoom: 1;
+    padding: 8px;
+    cursor: pointer;
+    border: 1px solid #bbb;
+    overflow: visible;
+    font: bold 13px arial, helvetica, sans-serif;
+    text-decoration: none;
+    color: #555;
+    vertical-align: middle;
+    text-align: center;
+    white-space: pre-line;
+
+    background-color: #ddd;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(255,255,255,1)), to(rgba(255,255,255,0)));
+    background-image: -webkit-linear-gradient(top, rgba(255,255,255,1), rgba(255,255,255,0));
+    background-image: -moz-linear-gradient(top, rgba(255,255,255,1), rgba(255,255,255,0));
+    background-image: -ms-linear-gradient(top, rgba(255,255,255,1), rgba(255,255,255,0));
+    background-image: -o-linear-gradient(top, rgba(255,255,255,1), rgba(255,255,255,0));
+    background-image: linear-gradient(top, rgba(255,255,255,1), rgba(255,255,255,0));
+
+    -webkit-transition: background-color .2s ease-out;
+    -moz-transition: background-color .2s ease-out;
+    -ms-transition: background-color .2s ease-out;
+    -o-transition: background-color .2s ease-out;
+    transition: background-color .2s ease-out;
+    background-clip: padding-box; /* Fix bleeding */
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    -moz-box-shadow: 0 1px 0 rgba(0, 0, 0, .3), 0 2px 2px -1px rgba(0, 0, 0, .5), 0 1px 0 rgba(255, 255, 255, .3) inset;
+    -webkit-box-shadow: 0 1px 0 rgba(0, 0, 0, .3), 0 2px 2px -1px rgba(0, 0, 0, .5), 0 1px 0 rgba(255, 255, 255, .3) inset;
+    box-shadow: 0 1px 0 rgba(0, 0, 0, .3), 0 2px 2px -1px rgba(0, 0, 0, .5), 0 1px 0 rgba(255, 255, 255, .3) inset;
+    text-shadow: 0 1px 0 rgba(255,255,255, .9);
+
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+button:hover{
+    background-color: #eee;
+    color: #555;
+}
+
+button:active{
+    background: #e9e9e9;
+    position: relative;
+    top: 1px;
+    text-shadow: none;
+    -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, .3) inset;
+    -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, .3) inset;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, .3) inset;
+}
+
+button[disabled], .button[disabled]:hover, .button[disabled]:active{
+    border-color: #eaeaea;
+    background: #fafafa;
+    cursor: default;
+    position: static;
+    color: #999;
+    opacity:0.3; /* ?Maybe remove */
+    /* Usually, !important should be avoided but here it's really needed :) */
+    -moz-box-shadow: none !important;
+    -webkit-box-shadow: none !important;
+    box-shadow: none !important;
+    text-shadow: none !important;
 }
 
 h1 {
@@ -151,18 +226,6 @@ article .labels span.orange {
     width: 100%;
 }
 
-.setter {
-    margin: 5px 0px;
-}
-
-.buy-sell-button {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    padding: 5px;
-    border-radius: 5px;
-}
-
 .center {
     position: absolute;
     top: 0;
@@ -181,8 +244,9 @@ article .labels span.orange {
     padding: 0px !important;
 }
 
-.button {
+.login-button {
     padding: 15px 25px;
+    margin: 20px;
     display: inline-block;
     border: 3px solid #90d43d;
     font-weight: 700;
@@ -190,13 +254,11 @@ article .labels span.orange {
     font-size: 1rem;
     color: #90d43d;
     cursor: pointer;
+    background-image: none;
+    text-shadow: none;
 }
 
-.button:focus {
-    outline: 0;
-}
-
-.button.primary {
+.login-button.primary {
     border: none;
     /* background-color: #13102F; */
     background-color: #90d43d;
@@ -376,6 +438,19 @@ form input {
     padding: 5px;
 }
 
+.trade-inputs input {
+    margin: 5px 0px;
+}
+
+.trade-inputs button {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 5px;
+    margin: 5px 0px;
+    border-radius: 5px;
+}
+
 .age-chart {
     width: 600px;
     overflow: auto;
@@ -490,12 +565,6 @@ section h2 {
     color: white;
 }
 
-.landing .center .button {
-    margin-top: 20px;
-    margin-left: 10px;
-    margin-right: 10px;
-}
-
 .about-section {
     padding: 50px 10%;
     text-align: left;
@@ -543,8 +612,8 @@ form.center p {
     margin: 20px;
 }
 
-form.center .button {
-    margin-top: 40px;
+form.center button {
+    margin: 20px 10px;
 }
 
 
