--- a/pastvina/templates/pastvina/game.html
+++ b/pastvina/templates/pastvina/game.html
@@ -22,7 +22,7 @@
 </section> -->
 
 
-{% include "pastvina/parts/game_header.html" %}
+{% include "pastvina/parts/game_header.html" with crop_storage_size=round.crop_storage_size ticks_count=round.ticks %}
 
 <section class="padding-small light">
     <h2>Přehled plodin</h2>
