--- a/pastvina/templates/pastvina/parts/game_header.html
+++ b/pastvina/templates/pastvina/parts/game_header.html
@@ -1,8 +1,14 @@
 <!-- Game Header -->
 <div id="game-header">
     <div class="horizontal-apart game-header dark-color">
-        <div>Peníze: <span id="game-money">-</span></div>
-        <div>Další iterace za <span id="tick-countdown">-</span> s</div>
+        <div class="horizontal-packed-container">
+            <div>Peníze: <span id="game-money">-</span></div>
+            <div>Sklad plodin: <span id="crop-rotting-amount">0</span>&nbsp;(+<span id="next-tick-new-rotting">0</span>)&nbsp;/&nbsp;{{ crop_storage_size }}</div>
+        </div>
+        <div class="horizontal-packed-container">
+            <div>Iterace: <span id="tick-index">-</span>&nbsp;/&nbsp;{{ ticks_count }}</div>
+            <div>Další iterace za&nbsp;<span id="tick-countdown">-</span>&nbsp;s</div>
+        </div>
     </div>
 </div>
 <div style="display: none;" id="game-header-placeholder"></div>
