--- a/pastvina/templates/pastvina/parts/menu.html
+++ b/pastvina/templates/pastvina/parts/menu.html
@@ -11,7 +11,7 @@
     <div class="horizontal-packed-container">
     <a href="/" class="logo">N-trophy 2021 finále</a>
 
-    <a href="{% url 'game_overview' %}">Hry</a>
+    <a href="{% url 'game_overview' %}">Přehled kol</a>
 
     <a href="{% url 'rules' %}">Pravidla</a>
 
