--- a/pastvina/templates/pastvina/parts/game_header.html
+++ b/pastvina/templates/pastvina/parts/game_header.html
@@ -2,7 +2,7 @@
 <div id="game-header">
     <div class="horizontal-apart game-header dark-color">
         <div class="horizontal-packed-container">
-            <div>Peníze: <span id="game-money">-</span></div>
+            <div>Peníze: <span id="game-money">-</span> (-<span id="consumption-money">0</span>)</div>
             <div>Sklad plodin: <span id="crop-rotting-amount">0</span>&nbsp;(+<span id="next-tick-new-rotting">0</span>)&nbsp;/&nbsp;{{ crop_storage_size }}</div>
         </div>
         <div class="horizontal-packed-container">
