Add livestock ammount sold to game header

--- a/pastvina/templates/pastvina/parts/game_header.html
+++ b/pastvina/templates/pastvina/parts/game_header.html
@@ -4,6 +4,7 @@
         <div class="horizontal-packed-container">
             <div>Peníze: <span id="game-money">-</span> (-<span id="consumption-money">0</span>)</div>
             <div>Sklad plodin: <span id="crop-rotting-amount">0</span>&nbsp;(+<span id="next-tick-new-rotting">0</span>)&nbsp;/&nbsp;{{ crop_storage_size }}</div>
+            <div>Prodáno dobytka: <span id="ls-sold-amount">0</span>&nbsp;/&nbsp;{{ round.livestock_slaughter_limit }}</div>
         </div>
         <div class="horizontal-packed-container">
             <div>Iterace: <span id="tick-index">-</span>&nbsp;/&nbsp;{{ ticks_count }}</div>
