--- a/pastvina/static/pastvina/css/main.css
+++ b/pastvina/static/pastvina/css/main.css
@@ -15,7 +15,7 @@ input {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     height: 30px;
-    padding: 5px;
+    padding: 5px 10px;
     border: 1px solid #bbb;
     border-radius: 5px;
 }
@@ -85,7 +85,6 @@ button[disabled], .button[disabled]:hover, .button[disabled]:active{
     cursor: default;
     position: static;
     color: #999;
-    opacity:0.3; /* ?Maybe remove */
     /* Usually, !important should be avoided but here it's really needed :) */
     -moz-box-shadow: none !important;
     -webkit-box-shadow: none !important;
@@ -465,7 +464,7 @@ form input {
 .trade-inputs {
     flex-basis: 300px;
     padding: 25px 10px;
-    min-width: 120px;
+    min-width: min-content;
 }
 
 .trade-inputs > div {
@@ -481,7 +480,7 @@ form input {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    padding: 5px;
+    padding: 5px 10px;
     margin: 5px 0px;
     border-radius: 5px;
 }
