--- a/pastvina/static/pastvina/css/main.css
+++ b/pastvina/static/pastvina/css/main.css
@@ -92,6 +92,26 @@ button[disabled], .button[disabled]:hover, .button[disabled]:active{
     text-shadow: none !important;
 }
 
+#top-button {
+    
+    position: fixed;
+    bottom: 20px;
+    right: 40px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    background-color: red;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 10px;
+    font-size: 18px;
+}
+
+#top-button:hover {
+    background-color: #555;
+}
+
 h1 {
     font-size: 3rem;
     margin: 0;
@@ -116,6 +136,7 @@ p {
     max-width: 600px;
     text-align: left;
 }
+
 
 section {
     position: relative;
@@ -372,6 +393,16 @@ a {
     margin: 4px;
 }
 
+.stats-wrapper {
+    background-color: #ddd;
+    padding: 15px 0px 30px 0px;
+    margin-bottom: 35px;
+}
+
+.green {
+    background-color: #90d43d;
+}
+
 .game-ref {
     display: flex;
     justify-content: center;
@@ -379,6 +410,27 @@ a {
     margin: 0px;
     width: 100%;
     height: 100%;
+}
+
+.vertical-container .test-rounds-stats {
+    margin-bottom: 30px;
+}
+
+.round-link {
+    margin-bottom: 4px; 
+    display: inline-block; 
+}
+
+.round-link-container {
+    display: block;
+}
+
+.round-link-container a {
+    padding: 10px;
+}
+
+.stats-menu {
+    padding-bottom: 60px;
 }
 
 .test_game {
