--- a/pastvina/templates/pastvina/parts/menu.html
+++ b/pastvina/templates/pastvina/parts/menu.html
@@ -10,7 +10,7 @@
     <a href="/" class="logo">N-trophy 2021 finále</a>
 
     <a href="{% url 'game_overview' %}">Přehled kol</a>
-    <a href="{% url 'team_game_stats' %}">Statistiky</a>
+    <a href="{% url 'team_stats' %}">Statistiky</a>
 
     <a href="{% url 'rules' %}">Pravidla</a>
 
