--- a/pastvina/templates/pastvina/team_stats.html
+++ b/pastvina/templates/pastvina/team_stats.html
@@ -32,14 +32,14 @@
     <h2>Statistiky všech</h2>
     <div class="round-link-container">
         {% for round in test_rounds %}
-            <a href="{% url 'statistics' round.id %}">
+            <a href="{% url 'round_stats' round.id %}">
                 <h3 class="round-link">Testovací kolo{% if test_rounds|length > 1 %} {{forloop.counter}}{% endif %}</h3>
             </a>
         {% endfor %}
         </div>
         <div class="round-link-container">
         {% for round in real_rounds %}
-            <a href="{% url 'statistics' round.id %}">
+            <a href="{% url 'round_stats' round.id %}">
                 <h3 class="round-link">Kolo {{forloop.counter}}</h3>
             </a>
         {% endfor %}
@@ -57,7 +57,7 @@
         <div class="test-rounds-stats">
         {% for round in test_rounds %}
         <div class="game-wrapper stats-wrapper">
-            <a href="{% url 'statistics' round.id %}" id="test_round_{{ forloop.counter }}">
+            <a href="{% url 'round_stats' round.id %}" id="test_round_{{ forloop.counter }}">
                 <h2 style="margin-bottom:4px">Testovací kolo{% if test_rounds|length > 1 %} {{forloop.counter}}{% endif %}</h2>
             </a>
             <div class="container">
@@ -69,7 +69,7 @@
 
         {% for round in real_rounds %}
         <div class="game-wrapper stats-wrapper">
-            <a class="game-stats-ref" href="{% url 'statistics' round.id %}" id="round_{{ forloop.counter }}">
+            <a class="game-stats-ref" href="{% url 'round_stats' round.id %}" id="round_{{ forloop.counter }}">
                 <h2 style="margin-bottom:4px">Kolo {{forloop.counter}}</h2>
             </a>
             <div class="container">
