--- a/pastvina/templates/pastvina/parts/menu.html
+++ b/pastvina/templates/pastvina/parts/menu.html
@@ -29,6 +29,6 @@
 </div>
 </nav>
 
-<a href="#nav-menu" id="top-button" color="blue" title="Go to top">
+<a href="#" id="top-button" class="dark-color" title="Go to top">
     <i class="fas fa-arrow-up"></i>
 </a>
