--- a/pastvina/templates/pastvina/parts/menu.html
+++ b/pastvina/templates/pastvina/parts/menu.html
@@ -7,9 +7,9 @@
 {% endif %}
 <div class="horizontal-apart"  id="nav-menu">
     <div class="horizontal-packed-container">
-    <a href="/" class="logo">N-trophy 2021 finále</a>
+    <a href="/" class="logo">Finálová úloha logika</a>
 
-    <a href="{% url 'game_overview' %}">Přehled kol</a>
+    <a href="{% url 'game_overview' %}">Hrát</a>
     <a href="{% url 'team_stats' %}">Statistiky</a>
 
     <a href="{% url 'rules' %}">Pravidla</a>
