Add info to intro page.

--- a/pastvina/templates/pastvina/index.html
+++ b/pastvina/templates/pastvina/index.html
@@ -10,15 +10,97 @@
 <section class="full-height full-width landing background">
     <div class="overlay"></div>
     <div class="center">
-    <h1>A s kým paseš kozy ty?</h1>
+    <p>Na následujících 90 minut se stáváte farmáři, pěstujete plodiny, chováte
+    zvířata a snažíte se maximalizovat svůj zisk.</p>
+
+    <p>Hrát na body budete celkem třikrát. První kolo bude začínat 16:10. Do té
+    doby si budete moci nastudovat pravidla a odehrát připravené testovací
+    kolo, které slouží k tomu, abyste se mohli blíže seznámit s rozhraním hry a
+    pochopit její základní principy. Doporučujeme ho využít k tvorbě strategie
+    pro následující soutěžní kola.</p>
+
+    <p>Následující kola budou trvat zhruba 15 minut. Po každém kole budete mít
+    10 minut na analýzu vaší strategie a případnou přípravu strategie nové.</p>
+
+    <p>Na začátku každého kola máte k dispozici 1 000 peněz, za které můžete
+    nakupovat plodiny a zvířata. Ty pak můžete sklízet (popř. porážet) a
+    prodávat, čímž si vyděláte další peníze, za které můžete dále nakupovat
+    atd. Plodiny stačí zasadit a počkat, až vyrostou. Pokud je váš sklad plný a
+    právě vám dozrála jedna nová plodina, umístí se do skladu na úkor
+    patřičného množství vaší nejstarší plodiny (která shnije). Pokud přidáváte
+    zároveň naráz do skladu více plodin různého druhu, které se tam nevejdou
+    všechny, přidávají se postupně od té, kterou v tabulce vidíte nejvíce
+    nahoře, ostatní shnijí.</p>
+
+    <p>Zvířata musíte krmit, a to plodinami, které s vlastnictvím zvířat
+    automaticky nakupujete. Pokud na tyto plodiny nemáte peníze a jakoukoli
+    část vámi chovaných zvířat nejste schopni uživit, zemřou všechna vaše
+    zvířata. Proto je možné některá zvířata dle vašeho výběru utratit. Zvířata
+    po nakrmení generují každou iteraci od dosažení dospělosti určitý produkt,
+    za který vám systém automaticky přičítá jeho aktuální cenu produkce
+    jedince.</p>
+
+    <p>Informace o jednotlivých surovinách najdete v tabulkách v rozhraní hry.
+    Jediná položka, která se mění, je cena. Hraje se tahově, přičemž v prvním
+    kole bude 30 iterací po 30 s a ve druhém a třetím kole 45 iterací po 20 s.
+    V každé iteraci je možné provést pouze jeden nákup a jeden prodej každé z
+    komodit. Po každé iteraci se uloží zaklikané změny a odešlou se k
+    vyhodnocení. V návaznosti na tahu vás a vašich soupeřů se změní situace na
+    trhu a upraví se ceny plodin a zvířat.</p>
     </div>
 </section>
 
 <section class="about-section">
-    <div class="container">
-    <h1>Zajímavá informace.</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    </div>
+    <h2>Dejte si pozor na následující věci</h2>
+    <ul>
+    <li>Ceny všech surovin se mění s časem.</li>
+    <li>Když nebudete mít dost peněz na nakrmení všech zvířat, zemřou vám
+    všechna. Proto je dobré zvířata, která nezvládnete uživit, utratit.</li>
+    <li>Sklad plodin má jen omezenou kapacitu. </li>
+    <li>Nejdříve se zvířata automaticky nakrmí, až poté produkují.</li>
+    <li>Je zaznamenán pouze první nákup/prodej dané komodity v jedné iteraci.
+    Další akce stejného typu nebudou počítány. Dobře se tedy v týmu
+    domluvte.</li>
+    </ul>
+
+    <h2>Rozhraní hry</h2>
+    <p>Rozhraní samotné hry se vám ukáže po vybrání konkrétní hry. Hru můžete
+    vybrat ze seznamu v záložce "Hry" v horním menu. Doporučujeme si rozhraní
+    prohlédnout před samotným začátkem hry.</p>
+
+    <p>V horní části stránky se nachází informační panel. Na jeho levé straně
+    vidíte vaši současnou hotovost, kapacitu skladu plodin a počet zvířat,
+    které ještě můžete během dané iterace porazit, na pravé pak čas zbývající
+    ado konce iterace a číslo aktuální iterace.</p>
+
+    <p>V následující části najdete přehledy plodin a dobytka. V tabulkách
+    najdete důležité vlastnosti včetně měnících se cen, v grafech pak současný
+    stav svých polí, pastvin a své stodoly.</p>
+
+    <h2>Je zákázáno</h2>
+    <ul>
+    <li>Spolupracovat s kýmkoli mimo váš soutěžní tým.</li>
+    <li>Komunikovat s ostatními týmy.</li>
+    <li>Používat složitější výpočetní techniku.</li>
+    </ul>
+
+    <h2>Je povoleno</h2>
+    <ul>
+    <li>Komunikovat se členy vlastního týmu.</li>
+    <li>Obsluhovat aplikaci z více zařízení najednou.</li>
+    <li>Dělat si poznámky na papír/do počítače, používat kalkulačku.</li>
+    <li>Jíst a pít v průběhu soutěže.</li>
+    </ul>
+
+    <h2>Hodnocení</h2>
+    <ul>
+    <li>Zisk z jednotlivých kol se sčítá a převádí na body. Tvoří cca 70 %
+    celkového hodnocení.</li>
+    <li>Své analýzy, strategie a informace o průběhu hry sepište do jednoho
+    dokumentu a odevzdejte ve formátu pdf do odevzdárny na stránkách
+    http://ntrophy.cz/.</li>
+    <li>Po skončení hry se s vámi orgové na 5 minut spojí a položí vám pár otázek. Neopouštějte proto hovor po skončení posledního kola hry.</li>
+    </ul>
 </section>
 
 <section class="dark">
