--- a/pastvina/templates/pastvina/game_overview.html
+++ b/pastvina/templates/pastvina/game_overview.html
@@ -22,6 +22,7 @@
                     <p>{{round.start_nice_str}} – {{round.end_nice_str}}</p>
                     <p>Počet iterací: {{round.ticks}}</p>
                     <p>Délka jedné iterace: {{round.period_sec}} s</p>
+                    <p>Počáteční peníze: {{round.start_money}}</p>
                     <p>Maximální velikost skladu: {{round.crop_storage_size}}</p>
                     <p>Limit porážení: {{round.livestock_slaughter_limit}}</p>
                 </a>
