--- a/pastvina/templates/pastvina/parts/menu.html
+++ b/pastvina/templates/pastvina/parts/menu.html
@@ -9,10 +9,9 @@
     <div class="horizontal-packed-container">
     <a href="/" class="logo">Finálová úloha logika</a>
 
+    <a href="/">Pravidla</a>
     <a href="{% url 'game_overview' %}">Hrát</a>
     <a href="{% url 'team_stats' %}">Statistiky</a>
-
-    <a href="{% url 'rules' %}">Pravidla</a>
 
     </div>
     <div class="horizontal-packed-container">
