--- a/pastvina/templates/pastvina/game_overview.html
+++ b/pastvina/templates/pastvina/game_overview.html
@@ -35,17 +35,10 @@
 <section class="statistics light-color">
     <h2>Statistiky z odehraných kol</h2>
     <div class="vertical-container">
-        {% for round in test_rounds %}
+        {% for round in rounds %}
         <div class="game-wrapper">
             <a class="game-ref" href="{% url 'round_stats' round.id %}">
-                <h3 style="margin:4px">Testovací kolo{% if test_rounds|length > 1 %} {{forloop.counter}}{% endif %}</h3>
-            </a>
-        </div>
-        {% endfor %}
-        {% for round in real_rounds %}
-        <div class="game-wrapper">
-            <a class="game-ref" href="{% url 'round_stats' round.id %}">
-                <h3 style="margin:4px">Kolo {{forloop.counter}}</h3>
+                <h3>{{round.name}}<h3>
             </a>
         </div>
         {% endfor %}
