--- a/pastvina/templates/pastvina/parts/menu.html
+++ b/pastvina/templates/pastvina/parts/menu.html
@@ -18,9 +18,7 @@
         <a href="{% url 'admin:index' %}">Admin</a>
     {% endif %}
     {% if user.is_authenticated %}
-        {% comment %}
-        <a href="{% url 'account' %}">{{ request.user.contestant }}</a>
-        {% endcomment %}
+        {{ request.user.get_full_name }}
         <a href="{% url 'logout' %}">Odhlásit se</a>
     {% endif %}
     </div>
