--- a/pastvina/templates/pastvina/index.html
+++ b/pastvina/templates/pastvina/index.html
@@ -10,9 +10,13 @@
 <section class="full-height full-width landing background">
     <div class="overlay"></div>
     <div class="center">
-    <p>Na následujících 90 minut se stáváte farmáři, pěstujete plodiny, chováte
-    zvířata a snažíte se maximalizovat svůj zisk.</p>
+    <h2>Na následujících 90 minut se stáváte farmáři, pěstujete plodiny, chováte
+        zvířata a snažíte se maximalizovat svůj zisk.</h2>
+    </div>
+</section>
 
+<section class="about-section">
+    <h2>Základní pravidla</h2>
     <p>Hrát na body budete celkem třikrát. První kolo bude začínat 16:10. Do té
     doby si budete moci nastudovat pravidla a odehrát připravené testovací
     kolo, které slouží k tomu, abyste se mohli blíže seznámit s rozhraním hry a
@@ -47,10 +51,7 @@
     komodit. Po každé iteraci se uloží zaklikané změny a odešlou se k
     vyhodnocení. V návaznosti na tahu vás a vašich soupeřů se změní situace na
     trhu a upraví se ceny plodin a zvířat.</p>
-    </div>
-</section>
-
-<section class="about-section">
+    
     <h2>Dejte si pozor na následující věci</h2>
     <ul>
     <li>Ceny všech surovin se mění s časem.</li>
