--- a/pastvina/templates/404.html
+++ b/pastvina/templates/404.html
@@ -4,6 +4,6 @@
 
 {% block content %}
 <div class="w3-container content-column-full w3-center w3-padding-64">
-<h1 class="w3-margin w3-padding-large" style="display: inline;">Výsledek nebyl nalezen</h1>
+<h1 class="w3-margin w3-padding-large" style="display: inline; color: black;">Výsledek nebyl nalezen</h1>
 </div>
 {% endblock %}
