--- a/pastvina/templates/pastvina/parts/menu.html
+++ b/pastvina/templates/pastvina/parts/menu.html
@@ -17,6 +17,10 @@
     {% if user.is_superuser %}
         <a href="{% url 'admin:index' %}">Admin</a>
     {% endif %}
+    {% if user.is_anonymous %}
+        <a href="{% url 'login' %}">Login</a>
+        <a href="{% url 'activate' %}">Aktivace</a>
+    {% endif %}
     {% if user.is_authenticated %}
         <div class="nav-item">
             {{ request.user.get_full_name }}
