Upodate page names

--- a/pastvina/templates/pastvina/base.html
+++ b/pastvina/templates/pastvina/base.html
@@ -27,7 +27,7 @@
 </script>
 
 
-<title>{% block title %} N-Trophy {% endblock %}</title>
+<title>{% block title %} Logika N-Trophy {% endblock %}</title>
 
 {% block head %}{% endblock%}
 <body>
