--- a/pastvina/templates/pastvina/index.html
+++ b/pastvina/templates/pastvina/index.html
@@ -2,7 +2,7 @@
 {% load extras %}
 {% load static %}
 
-{% block title %} N-Trophy úvod {% endblock%}
+{% block title %} Úvod | Logika N-Trophy {% endblock%}
 
 {% block content %}
 
