--- a/pastvina/templates/pastvina/user_activate.html
+++ b/pastvina/templates/pastvina/user_activate.html
@@ -1,6 +1,6 @@
 {% extends "pastvina/base.html" %}
 
-{% block title %} N-Trophy {% endblock %}
+{% block title %} Aktivace týmu | Logika N-Trophy {% endblock%}
 
 {% block content %}
     <section class="padding dark-color login">
