--- a/pastvina/static/pastvina/css/main.css
+++ b/pastvina/static/pastvina/css/main.css
@@ -253,10 +253,10 @@ article .labels span.orange {
 }
 
 .center {
-    position: absolute;
+    /* position: absolute;
     top: 200px;
     left: 0;
-    right: 0;
+    right: 0; */
     margin: auto;
     display: block;
     text-align: center;
@@ -323,6 +323,11 @@ article .labels span.orange {
 p.alert,
 span.alert {
     color: red;
+}
+
+.padding-large {
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
 
 .padding {
@@ -673,6 +678,7 @@ section.login {
     padding: 0;
     height: 100vh;
     min-height: 800px;
+    display: flex;
 }
 
 form.center h3 {
