--- a/pastvina/templates/404.html
+++ b/pastvina/templates/404.html
@@ -1,9 +1,9 @@
 {% extends "pastvina/base.html" %}
 
-{% block title %} N-Trophy{% endblock%}
+{% block title %} Page Not Found | Logika N-Trophy {% endblock%}
 
 {% block content %}
-<div class="w3-container content-column-full w3-center w3-padding-64">
-<h1 class="w3-margin w3-padding-large" style="display: inline; color: black;">Výsledek nebyl nalezen</h1>
+<div class="horizontal-container">
+    <h1 class="margin padding-large" style="display: inline; color: black; flex: 1; text-align: center;">Výsledek nebyl nalezen</h1>
 </div>
 {% endblock %}
