--- a/pastvina/templates/pastvina/game_statistics.html
+++ b/pastvina/templates/pastvina/game_statistics.html
@@ -1,7 +1,7 @@
 {% extends "pastvina/base.html" %}
 {% load extras %}
 
-{% block title %} Hra {% endblock%}
+{% block title %} Statistiky | Logika N-Trophy {% endblock%}
 
 {% block head %}
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
