Add proper rules.

--- a/pastvina/templates/pastvina/parts/menu.html
+++ b/pastvina/templates/pastvina/parts/menu.html
@@ -9,7 +9,7 @@
     <div class="horizontal-packed-container">
     <a href="/" class="logo">Finálová úloha logika</a>
 
-    <a href="/">Pravidla</a>
+    <a href="{% url 'rules' %}">Pravidla</a>
     <a href="{% url 'game_overview' %}">Hrát</a>
 
     </div>
