--- a/pastvina/templates/pastvina/rules.html
+++ b/pastvina/templates/pastvina/rules.html
@@ -16,66 +16,95 @@
 
 <section class="padding-small dark rules">
     <h3>O hře</h3>
-    <p>Na následujících 90 minut se stáváte farmáři, pěstujete plodiny, chováte dobytek a snažíte se maximalizovat svůj zisk.</p>
-    <p>Hrát budete celkem čtyřikrát. První kolo nebude na body a bude trvat pouhých 5 minut.
-        Slouží k tomu, abyste se mohli blíže seznámit s rozhraním hry a pochopit její základní principy.
-        Doporučujeme ho využít k tvorbě strategie pro následující soutěžní kola.</p>
-    <p>Následující kola budou trvat vždy 10 minut.
-        Po každém kole budete mít 5-10 minut čas na analýzu vaší strategie a případnou přípravu strategie nové.</p>
-    <p style="margin-top: 10px">
-        Na začátku máte k dispozici 2 000 mincí, za které můžete nakupovat plodiny a dobytek.
-        Ty pak můžete sklízet (popř. porážet) a prodávat, čímž si vyděláte další mince, za které můžete nakupovat atd.
-        Plodiny stačí zasadit a počkat, až vyrostou. Dobytek však musíte krmit, a to plodinami, které si buď koupíte, nebo sami vypěstujete.
-        Informace o jednotlivých surovinách najdete v tabulkách v rozhraní hry. Jediná položka, která se mění, je cena.
-    </p>
-    <p>Hraje se tahově, každých 10-30 s se uloží zaklikané změny a odešlou k vyhodnocení.
-        V návaznosti na tahu vás a vašich soupeřů se změní situace na trhu a upraví se ceny plodin a dobytka.</p>
+    <p>Na následujících 90 minut se stáváte farmáři, pěstujete plodiny, chováte
+    zvířata a snažíte se maximalizovat svůj zisk.</p>
+
+    <p>Hrát na body budete celkem třikrát. První kolo bude začínat 16:10. Do té
+    doby si budete moci nastudovat pravidla a odehrát připravené testovací
+    kolo, které slouží k tomu, abyste se mohli blíže seznámit s rozhraním hry a
+    pochopit její základní principy. Doporučujeme ho využít k tvorbě strategie
+    pro následující soutěžní kola.</p>
+
+    <p>Následující kola budou trvat zhruba 15 minut. Po každém kole budete mít
+    10 minut na analýzu vaší strategie a případnou přípravu strategie nové.</p>
+
+    <p>Na začátku každého kola máte k dispozici 1 000 peněz, za které můžete
+    nakupovat plodiny a zvířata. Ty pak můžete sklízet (popř. porážet) a
+    prodávat, čímž si vyděláte další peníze, za které můžete dále nakupovat
+    atd. Plodiny stačí zasadit a počkat, až vyrostou. Pokud je váš sklad plný a
+    právě vám dozrála jedna nová plodina, umístí se do skladu na úkor
+    patřičného množství vaší nejstarší plodiny (která shnije). Pokud přidáváte
+    zároveň naráz do skladu více plodin různého druhu, které se tam nevejdou
+    všechny, přidávají se postupně od té, kterou v tabulce vidíte nejvíce
+    nahoře, ostatní shnijí.</p>
+
+    <p>Zvířata musíte krmit, a to plodinami, které s vlastnictvím zvířat
+    automaticky nakupujete. Pokud na tyto plodiny nemáte peníze a jakoukoli
+    část vámi chovaných zvířat nejste schopni uživit, zemřou všechna vaše
+    zvířata. Proto je možné některá zvířata dle vašeho výběru utratit. Zvířata
+    po nakrmení generují každou iteraci od dosažení dospělosti určitý produkt,
+    za který vám systém automaticky přičítá jeho aktuální cenu produkce
+    jedince.</p>
+
+    <p>Informace o jednotlivých surovinách najdete v tabulkách v rozhraní hry.
+    Jediná položka, která se mění, je cena. Hraje se tahově, přičemž v prvním
+    kole bude 30 iterací po 30 s a ve druhém a třetím kole 45 iterací po 20 s.
+    V každé iteraci je možné provést pouze jeden nákup a jeden prodej každé z
+    komodit. Po každé iteraci se uloží zaklikané změny a odešlou se k
+    vyhodnocení. V návaznosti na tahu vás a vašich soupeřů se změní situace na
+    trhu a upraví se ceny plodin a zvířat.</p>
 </section>
 
 <section class="padding-small light rules">
     <h3>Dejte si pozor na následující věci:</h3>
-    <p>
-        <ul>
-            <li>Ceny všech surovin se mění s časem.</li>
-            <li>Když nebudete mít dost peněz na nakrmení zvířat, zemřou vám.</li>
-            <li>Stodola má jen omezenou kapacitu.</li>
-        </ul>
-    </p>
+    <ul>
+    <li>Ceny všech surovin se mění s časem.</li>
+    <li>Když nebudete mít dost peněz na nakrmení všech zvířat, zemřou vám
+    všechna. Proto je dobré zvířata, která nezvládnete uživit, utratit.</li>
+    <li>Sklad plodin má jen omezenou kapacitu. </li>
+    <li>Nejdříve se zvířata automaticky nakrmí, až poté produkují.</li>
+    <li>Je zaznamenán pouze první nákup/prodej dané komodity v jedné iteraci.
+    Další akce stejného typu nebudou počítány. Dobře se tedy v týmu
+    domluvte.</li>
+    </ul>
 </section>
 
 <section class="padding-small dark rules">
     <h3>Rozhraní hry</h3>
-    <p>Rozhraní samotné hry se vám ukáže po vybrání konkrétní hry.
-        Hru můžete vybrat ze seznamu v záložce "Hry" v horním menu.
-        Doporučujeme si rozhraní prohlédnout před samotným začátkem hry.</p>
-    <p>V horní části stránky se nachází informační panel.
-        Na jeho levé straně vidíte vaši současnou hotovost, na pravé pak čas zbývající do konce tahu.</p>
-    <p>V následující části najdete přehledy plodin a dobytka.
-        V tabulkách najdete důležité (neměnné) vlastnosti včetně měnících se cen, v grafech pak současný stav svých polí, pastvin a své stodoly. </p>
+
+    <p>Rozhraní samotné hry se vám ukáže po vybrání konkrétní hry. Hru můžete
+    vybrat ze seznamu v záložce "Hry" v horním menu. Doporučujeme si rozhraní
+    prohlédnout před samotným začátkem hry.</p>
+
+    <p>V horní části stránky se nachází informační panel. Na jeho levé straně
+    vidíte vaši současnou hotovost, kapacitu skladu plodin a počet zvířat,
+    které ještě můžete během dané iterace porazit, na pravé pak čas zbývající
+    ado konce iterace a číslo aktuální iterace.</p>
+
+    <p>V následující části najdete přehledy plodin a dobytka. V tabulkách
+    najdete důležité vlastnosti včetně měnících se cen, v grafech pak současný
+    stav svých polí, pastvin a své stodoly.</p>
 </section>
 
 <section class="padding-small light rules">
 <div class="horizontal-container">
     <div>
         <h3>Je zakázáno:</h3>
-        <p>
-            <ul>
-                <li>Spolupracovat s kýmkoli mimo váš soutěžní tým.</li>
-                <li>Komunikovat s ostatními týmy.</li>
-                <li>Používat složitější výpočetní techniku.</li>
-            </ul>
-        </p>
+        <ul>
+        <li>Spolupracovat s kýmkoli mimo váš soutěžní tým.</li>
+        <li>Komunikovat s ostatními týmy.</li>
+        <li>Používat složitější výpočetní techniku.</li>
+        </ul>
     </div>
     <div>
         <h3>Je povoleno:</h3>
-        <p>
-            <ul>
-                <li>Komunikovat se členy vlastního týmu.</li>
-                <li>Obsluhovat aplikaci z více zařízení najednou.</li>
-                <li>Dělat si poznámky na papír/do počítače, používat kalkulačku.</li>
-                <li>Jíst a pít v průbehu soutěže.</li>
-            </ul>
-        </p>
+
+        <ul>
+        <li>Komunikovat se členy vlastního týmu.</li>
+        <li>Obsluhovat aplikaci z více zařízení najednou.</li>
+        <li>Dělat si poznámky na papír/do počítače, používat kalkulačku.</li>
+        <li>Jíst a pít v průběhu soutěže.</li>
+        </ul>
     </div>
 </div>
 </section>
@@ -84,9 +113,12 @@
     <h3>Hodnocení:</h3>
     <p>
         <ul>
-            <li>Zisk z jednotlivých kol se sčítá a převádí na body. Tvoří cca 60 % celkového hodnocení</li>
-            <li>Své analýzy, strategie a informace o průběhu hry sepište do jednoho dokumentu a odevzdejte ve formátu pdf do odevzdárny na stránkách <a href='http://ntrophy.cz/'>http://ntrophy.cz/</a>.</li>
-            <li>Po skončení hry se s vámi orgové na 5 minut spojí a položí vám pár otázek. Neopouštějte proto hovor po skončení posledního kola hry.</li>
+        <li>Zisk z jednotlivých kol se sčítá a převádí na body. Tvoří cca 70 %
+        celkového hodnocení.</li>
+        <li>Své analýzy, strategie a informace o průběhu hry sepište do jednoho
+        dokumentu a odevzdejte ve formátu pdf do odevzdárny na stránkách
+        http://ntrophy.cz/.</li>
+        <li>Po skončení hry se s vámi orgové na 5 minut spojí a položí vám pár otázek. Neopouštějte proto hovor po skončení posledního kola hry.</li>
         </ul>
     </p>
 </section>
